# projeto-final-dsme

./: .gitignore  README.md
backend/api-gateway/: index.js  package-lock.json  package.json
backend/service-control/: database.js  index.js  package-lock.json  package.json
backend/service-logging/: database.js  index.js  package-lock.json  package.json
embedded-system/: CMakeLists.txt  idf_component.yml
embedded-system/main/: CMakeLists.txt  main.c  network.c  network.h  wifi.c  wifi.h
mobile-app/: App.js  package-lock.json  package.json
